--- a/layaout/registroPerrito.html
+++ b/layaout/registroPerrito.html
@@ -4,11 +4,7 @@
 <head>
 	<!-- Basic Page Info -->
 	<meta charset="utf-8">
-<<<<<<< HEAD
-	<title>Registro</title>
-=======
 	<title>Registrar perrito</title>
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 
 	<!-- Site favicon -->
 	<link rel="website icon" href="vendors/images/mascota.png">
@@ -238,18 +234,9 @@
 							</div>
 							<nav aria-label="breadcrumb" role="navigation">
 								<ol class="breadcrumb">
-<<<<<<< HEAD
-
-									<li class="breadcrumb-item"><a href="/layaout/index.html">Inicio</a></li>
-									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
-
-									<li class="breadcrumb-item active" aria-current="page">Nuevo registro</li>
-
-=======
 									<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
 									<li class="breadcrumb-item"><a href="/layaout/mascota.html">Mascotas</a></li>
 									<li class="breadcrumb-item active" aria-current="page">Nuevo registro mascota</li>
->>>>>>> 7c301a7 (Se agrega la categoria gestion de adoptantes, se realiza las interfaces de todo el CRUD para gestion de usuarios y de adoptantes, se aplica aside y header a las interfaces que hacian falta por modificar)
 								</ol>
 							</nav>
 						</div>
@@ -309,10 +296,9 @@
 						<div class="form-group row">
 							<label class="col-sm-12 col-md-2 col-form-label">Imagen</label>
 							<div class="col-sm-12 col-md-10">
-								<input class="form-control" type="img" placeholder="png">
+								<input class="form-control" accept="image/*" type="file" placeholder="png">
 							</div>
 						</div>
-                            
 					</form>
 <a href="/layaout/mascota.html"><button class="btn btn-primary">Guardar</button></a>
 <a href="/layaout/mascota.html"><button style="border-color: brown; background-color: brown;" class="btn btn-primary">Cancelar</button></a>
